--- a/money/templates/base.html
+++ b/money/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>{% block title %}Your expenses{% endblock %}</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </head>
 <header>
     {% block menu %}
@@ -11,10 +14,15 @@
     <a href="{% url 'expenses:add_new_entry' %}">Add new entry</a> |
      <a href="{% url 'expenses:all_income' %}">All income</a> |
     <a href="{% url 'expenses:choose_date' %}">Choose date</a> |
-    <a href="{% url 'expenses:total' %}">Total</a>
+    <a href="{% url 'expenses:total_balance' %}">Total balance</a> |
     {% endblock %}
 
-<html lang="en">
 
 
+
+</header>
+<body>
+{% block body %}Hello! I'm empty{% endblock %}
+
+</body>
 </html>
