--- a/money/templates/expenses/expenses.html
+++ b/money/templates/expenses/expenses.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}All expenses{% endblock %}
+{% block body %}
+
+    <h2>All Expenses</h2>
+
+<table>
+    <tr>
+        <th>Category</th>
+        <th>Summa</th>
+        <th>Currency</th>
+        <th>Date_expenses</th>
+
+    </tr>
+     {% for entry in entries %}
+    <tr>
+        <td>{{ entry.сategory }}</td>
+        <td>{{ entry.summa }}</td>
+        <td>{{ entry.currency }}</td>
+        <td>{{ entry.date_money }}</td>
+    </tr>
+
+    {% endfor %}
+     <tr>Total: {{ expenses_rub }}rub, {{ expenses_usd }}usd, {{ expenses_euro }}euro, {{ expenses_byn }}byn</tr>
+
+</table>
+
+
+{% endblock %}
