login and choose courses

--- a/money/templates/expenses/income.html
+++ b/money/templates/expenses/income.html
@@ -22,7 +22,7 @@
     </tr>
 
     {% endfor %}
-     <tr>Total: {{ income_rub }}rub, {{ income_usd }}usd, {{ income_euro }}euro, {{ income_byn }}byn</tr>
+     <tr>Total: {{ income_rub }} RUB, {{ income_usd }} USD, {{ income_euro }} EURO, {{ income_byn }} BYN</tr>
 
 </table>
 
