--- a/money/templates/base.html
+++ b/money/templates/base.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,14 +11,20 @@
 </head>
 <header>
     {% block menu %}
-    <a href="{% url 'expenses:all_income_expenses' %}">All income/expenses</a> |
-    <a href="{% url 'expenses:add_new_entry' %}">Add new entry</a> |
-    <a href="{% url 'expenses:all_income' %}">All income</a> |
-    <a href="{% url 'expenses:all_expenses' %}">All expenses</a> |
-    <a href="{% url 'expenses:choose_date' %}">Choose date</a> |
-    <a href="{% url 'expenses:total_balance' %}">Total balance</a> |
+        <a href="{% url 'expenses:all_income_expenses' %}">All income/expenses</a> |
+        <a href="{% url 'expenses:add_new_entry' %}">Add new entry</a> |
+        <a href="{% url 'expenses:all_income' %}">All income</a> |
+        <a href="{% url 'expenses:all_expenses' %}">All expenses</a> |
+        <a href="{% url 'expenses:choose_date' %}">Choose date</a> |
+        <a href="{% url 'expenses:total_balance' %}">Total balance</a> |
     {% endblock %}
 
+    {% if not user.is_authenticated %}
+        <a href="{% url 'user_login' %}">Login</a>    |
+    {% else %}
+        Hello {{ request.user.get_full_name }}
+
+    {% endif %}
 </header>
 <body>
 {% block body %}Hello! I'm empty{% endblock %}
