--- a/money/templates/expenses/expenses.html
+++ b/money/templates/expenses/expenses.html
@@ -22,7 +22,11 @@
     </tr>
 
     {% endfor %}
-     <tr>Total: {{ expenses_rub }}rub, {{ expenses_usd }}usd, {{ expenses_euro }}euro, {{ expenses_byn }}byn</tr>
+
+
+    <tr>Total: {{ expenses_rub }} RUB, {{ expenses_usd }} USD, {{ expenses_euro }} EURO, {{ expenses_byn }} BYN</tr>
+
+
 
 </table>
 
