--- a/money/templates/expenses/add_new_entry.html
+++ b/money/templates/expenses/add_new_entry.html
@@ -10,7 +10,7 @@
         {{ form.as_table }}
 
     </table>
-    <input type="submit" value="Create">
+    <input type="submit" value="Save">
 
 </form>
 
