--- a/money/templates/expenses/filter.html
+++ b/money/templates/expenses/filter.html
@@ -23,7 +23,7 @@
             {{ form.as_p }}
 
         </table>
-        <input type="submit" value="Choose">
+        <input type="submit" value="Choose" class="btn btn-outline-info">
 
     </form>
 {% endif %}
