--- a/money/templates/base.html
+++ b/money/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,26 +5,31 @@
     <title>{% block title %}Your expenses{% endblock %}</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
-<header>
+<header class="layer1">
     {% block menu %}
-        <a href="{% url 'expenses:all_income_expenses' %}">All income/expenses</a> |
-        <a href="{% url 'expenses:add_new_entry' %}">Add new entry</a> |
-        <a href="{% url 'expenses:all_income' %}">All income</a> |
-        <a href="{% url 'expenses:all_expenses' %}">All expenses</a> |
-        <a href="{% url 'expenses:choose_date' %}">Choose date</a> |
-        <a href="{% url 'expenses:total_balance' %}">Total balance</a> |
+        <a class="btn btn-dark" href="{% url 'expenses:all_income_expenses' %}">All income/expenses</a>
+        <a class="btn btn-dark" href="{% url 'expenses:add_new_entry' %}">Add new entry</a>
+        <a class="btn btn-dark" href="{% url 'expenses:all_income' %}">All income</a>
+        <a class="btn btn-dark" href="{% url 'expenses:all_expenses' %}">All expenses</a>
+        <a class="btn btn-dark" href="{% url 'expenses:choose_date' %}">Choose date</a>
+        <a class="btn btn-dark" href="{% url 'expenses:total_balance' %}">Total balance</a>
+
     {% endblock %}
 
-    {% if not user.is_authenticated %}
-        <a href="{% url 'user_login' %}">Login</a>    |
-    {% else %}
-        Hello {{ request.user.get_full_name }}
+    {% if not user.is_authenticated %} <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
+
+    {% else %} Hello {{request.user}} <a class="btn btn-primary" href="{%url 'logout'%}">Logout</a>
 
     {% endif %}
 </header>
+
 <body>
 {% block body %}Hello! I'm empty{% endblock %}
 
