--- a/money/templates/expenses/total_balance.html
+++ b/money/templates/expenses/total_balance.html
@@ -8,8 +8,13 @@
     <h1>Total result</h1>
 
         <form action="." method="GET">
-            {{ form }}
-            <input type = "submit" value = "Choose">
+
+            {{form}}
+
+            <input type = "submit" value = "Choose" class="btn btn-outline-info">
+
+
+
         </form>
 
         <p>
