--- a/money/templates/expenses/expenses.html
+++ b/money/templates/expenses/expenses.html
@@ -22,13 +22,7 @@
     </tr>
 
     {% endfor %}
-
-
-    <tr>Total: {{ expenses_rub }} RUB, {{ expenses_usd }} USD, {{ expenses_euro }} EURO, {{ expenses_byn }} BYN</tr>
-
-
-
 </table>
-
+<caption>Total: {{ expenses_rub }} RUB, {{ expenses_usd }} USD, {{ expenses_euro }} EURO, {{ expenses_byn }} BYN</caption>
 
 {% endblock %}
