--- a/money/templates/expenses/total.html
+++ b/money/templates/expenses/total.html
@@ -12,6 +12,9 @@
         <th>Summa</th>
         <th>Currency</th>
         <th>Date_income/expenses</th>
+        <th></th>
+        <th></th>
+        <th></th>
     </tr>
     {% for entry in entries %}
     <tr>
@@ -22,7 +25,7 @@
         <td>{{ entry.date_money }}</td>
         <td><a href="/delete/{{ entry.id }}">Delete</a></td>
         <td> | </td>
-        <td><a href="/update/{{ entry.id }}">Update</a></td>
+        <td><a href="{% url 'expenses:update_entry' entry.id %}">Update</a></td>
     </tr>
 
     {% endfor %}
